# Vulkan-MarchingCube

./: .gitmodules  CMakeLists.txt  LICENSE  LUT.py  README.md  log.txt  main.cpp  makefile  marchingcube.cpp  marchingcube.h  scan.cpp  scan.h  setup_env.sh  test  test.cpp  validate.py
include/: .vk_application.h.swp  marchingcube.h  scan.h  tools.h  vk_application.h
shaders/: cell_test.comp.spv  edge_compact.comp  edge_compact.comp.spv  edge_test.comp  edge_test.comp.spv  gen_normals.comp  gen_normals.comp.spv  gen_vertices.comp  gen_vertices.comp.spv  mc.vert  mc.vert.spv  scan.comp  scan.comp.spv  scan_ed.comp  uniform_update.comp  uniform_update.comp.spv  vtest.comp.spv
src/: .vk_application.cpp.swp  main.cpp  marchingcube.cpp  scan.cpp  test.cpp  vk_application.cpp
